force-app/main/default/objects/Account/fields/Active_Customer__c.field-meta.xml
<CustomField>
    <fullName>Active_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cliente dado de baja</label>
    <type>Checkbox</type>
</CustomField>