force-app/main/default/objects/Account/fields/Anonimo__c.field-meta.xml
<CustomField>
    <fullName>Anonimo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Anónimo</label>
    <type>Checkbox</type>
</CustomField>