force-app/main/default/objects/Account/fields/antiguo_cliente__c.field-meta.xml
<CustomField>
    <fullName>antiguo_cliente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>antiguo cliente</label>
    <type>Checkbox</type>
</CustomField>