force-app/main/default/objects/Account/fields/Cliente_anonimo__c.field-meta.xml
<CustomField>
    <fullName>Cliente_anonimo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cliente anónimo</label>
    <type>Checkbox</type>
</CustomField>