force-app/main/default/objects/Account/fields/Codigo_Postal__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Postal__c</fullName>
    <description>Codigo Postal</description>
    <label>Código Postal</label>
    <length>15</length>
    <type>Text</type>
</CustomField>