force-app/main/default/objects/Account/fields/Codigo_promocional__c.field-meta.xml
<CustomField>
    <fullName>Codigo_promocional__c</fullName>
    <label>Código promocional</label>
    <length>255</length>
    <type>Text</type>
</CustomField>