force-app/main/default/objects/Account/fields/Crear_Alerta__c.field-meta.xml
<CustomField>
    <fullName>Crear_Alerta__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Si el campo esta desmarcado no se creará alertas a nivel de cuenta</description>
    <label>Crear Alerta</label>
    <type>Checkbox</type>
</CustomField>