force-app/main/default/objects/Account/fields/email_account__c.field-meta.xml
<CustomField>
    <fullName>email_account__c</fullName>
    <label>Correo electrónico</label>
    <type>Email</type>
</CustomField>