force-app/main/default/objects/Account/fields/Fecha_de_baja__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_baja__c</fullName>
    <description>Almacenará la información de la fecha en la que el cliente se ha dado de baja.</description>
    <label>Fecha de baja</label>
    <type>Date</type>
</CustomField>