force-app/main/default/objects/Account/fields/From_Converted__c.field-meta.xml
<CustomField>
    <fullName>From_Converted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Converted</label>
    <type>Checkbox</type>
</CustomField>