force-app/main/default/objects/Account/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Proviene de Lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>Customer Event</fullName>
            </value>
            <value>
                <fullName>Employee Referral</fullName>
            </value>
            <value>
                <fullName>External Referral</fullName>
            </value>
            <value>
                <fullName>Google AdWords</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Purchased List</fullName>
            </value>
            <value>
                <fullName>Trade Show</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Movistar Lite</fullName>
            </value>
            <value>
                <fullName>Telefónica</fullName>
            </value>
            <value>
                <fullName>Formulario</fullName>
            </value>
            <value>
                <fullName>Contratación Servicio</fullName>
            </value>
            <value>
                <fullName>Con Código</fullName>
            </value>
            <value>
                <fullName>Tarifa Móvil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>