force-app/main/default/objects/Account/fields/Motivo_cliente_error__c.field-meta.xml
<CustomField>
    <fullName>Motivo_cliente_error__c</fullName>
    <description>Se almacenará el motivo del error por el cual el cliente no ha quedado como suscriptor.</description>
    <label>Motivo cliente error</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>