force-app/main/default/objects/Account/fields/Not_Active_Customer__c.field-meta.xml
<CustomField>
    <fullName>Not_Active_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Modificado nombre por petición #29244</description>
    <label>Cliente dado de baja</label>
    <type>Checkbox</type>
</CustomField>