force-app/main/default/objects/Account/fields/Parent_account__c.field-meta.xml
<CustomField>
    <fullName>Parent_account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente principal</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Clientes traspasados</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>