force-app/main/default/objects/Account/fields/Tarjeta_Credito__c.field-meta.xml
<CustomField>
    <fullName>Tarjeta_Credito__c</fullName>
    <label>Tarjeta Crédito</label>
    <length>255</length>
    <type>Text</type>
</CustomField>