force-app/main/default/objects/Account/fields/Tipo_Codigo__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Codigo__c</fullName>
    <label>Tipo código promocional</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Código descuento</fullName>
            </value>
            <value>
                <fullName>Tarjeta regalo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>