force-app/main/default/objects/Account/validationRules/Si_es_ATC_modificar_zip_code.validationRule-meta.xml
<ValidationRule>
    <fullName>Si_es_ATC_modificar_zip_code</fullName>
    <active>false</active>
    <errorConditionFormula>IF(CONTAINS($Profile.Name, &apos;Agente ATC&apos;) &amp;&amp; 
		ISCHANGED(Codigo_Postal__c), true, false)</errorConditionFormula>
    <errorDisplayField>Codigo_Postal__c</errorDisplayField>
    <errorMessage>Privilegios insuficientes para editar el campo</errorMessage>
</ValidationRule>