force-app/main/default/objects/Account/validationRules/Si_no_es_admin_no_modificar_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Si_no_es_admin_no_modificar_Name</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Name), NOT($Permission.Account_modify_Name))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Privilegios insuficientes para editar el campo</errorMessage>
</ValidationRule>