force-app/main/default/objects/Account/validationRules/Validar_Pais_Spain.validationRule-meta.xml
<ValidationRule>
    <fullName>Validar_Pais_Spain</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISBLANK( BillingCountry ),AND(NOT(ISBLANK( BillingCountry )),  BillingCountry!=&apos;España&apos;, BillingCountry!= &apos;Spain&apos;))</errorConditionFormula>
    <errorDisplayField>BillingCountry</errorDisplayField>
    <errorMessage>El país debe ser España</errorMessage>
</ValidationRule>