force-app/main/default/objects/Account/validationRules/Validar_si_Billing_ZIP_es_espana.validationRule-meta.xml
<ValidationRule>
    <fullName>Validar_si_Billing_ZIP_es_espana</fullName>
    <active>true</active>
    <errorConditionFormula>OR(ISBLANK(BillingPostalCode),AND(
  NOT(ISBLANK(BillingPostalCode)),  
  NOT(REGEX(BillingPostalCode, &quot;^(01|02|03|04|05|06|07|08|09|[1-4][0-9]|5[0-2])\\d{3}$&quot;))
))</errorConditionFormula>
    <errorDisplayField>BillingPostalCode</errorDisplayField>
    <errorMessage>El codigo postal introducido tiene que pertenecer a España</errorMessage>
</ValidationRule>